// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeTable decorator should render correctly - with data 1`] = `
<div>
  <div
    class="pf-v5-c-treeview__control"
  >
    <div
      class="pf-v5-c-treeview__control-text"
    >
      value
    </div>
  </div>
</div>
`;

exports[`TreeTable decorator should render correctly - with data tree collapsed 1`] = `
<div>
  <div
    class="pf-v5-c-treeview__control"
  >
    <div
      class="pf-v5-c-treeview__toggle"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-1"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg pf-v5-c-treeview__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-v5-c-treeview__control-text"
    >
      value
    </div>
  </div>
</div>
`;

exports[`TreeTable decorator should render correctly - with data tree opened 1`] = `
<div>
  <div
    class="pf-v5-c-treeview__control"
  >
    <div
      class="pf-v5-c-treeview__toggle"
    >
      <button
        aria-disabled="false"
        class="pf-v5-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-2"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg pf-v5-c-treeview__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
    <div
      class="pf-v5-c-treeview__control-text"
    >
      value
    </div>
  </div>
</div>
`;
